* Stderr is now read to prevent hanging in case of an error (also errors are visible in the logs) * Timeout is introduced in case no activity is detected on stdout/stderr when a new process is started